option java_package = "org.example.hadoop.pd.rpc.protobuf";
option java_outer_classname = "TestRpcServiceProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.common;

import "test.proto";


/**
 * A protobuf service for use in tests
 */
service TestProtobufRpcProto {
  rpc ping(EmptyRequestProto) returns (EmptyResponseProto);
  rpc echo(EchoRequestProto) returns (EchoResponseProto);
  rpc error(EmptyRequestProto) returns (EmptyResponseProto);
  rpc error2(EmptyRequestProto) returns (EmptyResponseProto);
}

